Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12416

Maximum stack depth setting is not honoured when using lldb

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.2.0-beta1
    • Qt Creator 3.2.0-beta1
    • Debugger
    • None
    • OSX 10.9.3, Xcode 5.1.1, lldb
    • 453bb4ebe5f4f4472e0feebbcf0f1f409ca74fc0

      After setting the "Maximum stack depth" to 40, the debugger will only show 20 frames.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            erikv Erik Verbruggen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes