Debugger: Honor max stack depth settings for LLDB

Task-number: QTCREATORBUG-12416
Change-Id: I1fb908edaff8fbea55a6d19cb89342e94a7ab991
Reviewed-by: hjk <hjk121@nokiamail.com>